src/ffi/bindgen.rs

extern "C" {
    pub fn ffi_prep_cif_core(cif: *mut ffi_cif, abi: ffi_abi,
                             isvariadic: ::std::os::raw::c_uint,
                             nfixedargs: ::std::os::raw::c_uint,
                             ntotalargs: ::std::os::raw::c_uint,
                             rtype: *mut ffi_type, atypes: *mut *mut ffi_type)
     -> ffi_status;
    pub fn ffi_raw_call(cif: *mut ffi_cif,
                        _fn: ::std::option::Option<extern "C" fn()>,
                        rvalue: *mut ::std::os::raw::c_void,
                        avalue: *mut ffi_raw);
    pub fn ffi_ptrarray_to_raw(cif: *mut ffi_cif,
                               args: *mut *mut ::std::os::raw::c_void,
                               raw: *mut ffi_raw);
    pub fn ffi_raw_to_ptrarray(cif: *mut ffi_cif, raw: *mut ffi_raw,
                               args: *mut *mut ::std::os::raw::c_void);
    pub fn ffi_raw_size(cif: *mut ffi_cif) -> size_t;
    pub fn ffi_java_raw_call(cif: *mut ffi_cif,
                             _fn: ::std::option::Option<extern "C" fn()>,
                             rvalue: *mut ::std::os::raw::c_void,
                             avalue: *mut ffi_java_raw);
    pub fn ffi_java_ptrarray_to_raw(cif: *mut ffi_cif,
                                    args: *mut *mut ::std::os::raw::c_void,
                                    raw: *mut ffi_java_raw);
    pub fn ffi_java_raw_to_ptrarray(cif: *mut ffi_cif, raw: *mut ffi_java_raw,
                                    args: *mut *mut ::std::os::raw::c_void);
    pub fn ffi_java_raw_size(cif: *mut ffi_cif) -> size_t;
    pub fn ffi_closure_alloc(size: size_t,
                             code: *mut *mut ::std::os::raw::c_void)
     -> *mut ::std::os::raw::c_void;
    pub fn ffi_closure_free(arg1: *mut ::std::os::raw::c_void);
    pub fn ffi_prep_closure(arg1: *mut ffi_closure, arg2: *mut ffi_cif,
                            fun:
                                ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                               *mut ffi_cif,
                                                                           arg2:
                                                                               *mut ::std::os::raw::c_void,
                                                                           arg3:
                                                                               *mut *mut ::std::os::raw::c_void,
                                                                           arg4:
                                                                               *mut ::std::os::raw::c_void)>,
                            user_data: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_closure_loc(arg1: *mut ffi_closure, arg2: *mut ffi_cif,
                                fun:
                                    ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                   *mut ffi_cif,
                                                                               arg2:
                                                                                   *mut ::std::os::raw::c_void,
                                                                               arg3:
                                                                                   *mut *mut ::std::os::raw::c_void,
                                                                               arg4:
                                                                                   *mut ::std::os::raw::c_void)>,
                                user_data: *mut ::std::os::raw::c_void,
                                codeloc: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_raw_closure(arg1: *mut ffi_raw_closure, cif: *mut ffi_cif,
                                fun:
                                    ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                   *mut ffi_cif,
                                                                               arg2:
                                                                                   *mut ::std::os::raw::c_void,
                                                                               arg3:
                                                                                   *mut ffi_raw,
                                                                               arg4:
                                                                                   *mut ::std::os::raw::c_void)>,
                                user_data: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_raw_closure_loc(arg1: *mut ffi_raw_closure,
                                    cif: *mut ffi_cif,
                                    fun:
                                        ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                       *mut ffi_cif,
                                                                                   arg2:
                                                                                       *mut ::std::os::raw::c_void,
                                                                                   arg3:
                                                                                       *mut ffi_raw,
                                                                                   arg4:
                                                                                       *mut ::std::os::raw::c_void)>,
                                    user_data: *mut ::std::os::raw::c_void,
                                    codeloc: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_java_raw_closure(arg1: *mut ffi_java_raw_closure,
                                     cif: *mut ffi_cif,
                                     fun:
                                         ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                        *mut ffi_cif,
                                                                                    arg2:
                                                                                        *mut ::std::os::raw::c_void,
                                                                                    arg3:
                                                                                        *mut ffi_java_raw,
                                                                                    arg4:
                                                                                        *mut ::std::os::raw::c_void)>,
                                     user_data: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_java_raw_closure_loc(arg1: *mut ffi_java_raw_closure,
                                         cif: *mut ffi_cif,
                                         fun:
                                             ::std::option::Option<unsafe extern "C" fn(arg1:
                                                                                            *mut ffi_cif,
                                                                                        arg2:
                                                                                            *mut ::std::os::raw::c_void,
                                                                                        arg3:
                                                                                            *mut ffi_java_raw,
                                                                                        arg4:
                                                                                            *mut ::std::os::raw::c_void)>,
                                         user_data:
                                             *mut ::std::os::raw::c_void,
                                         codeloc: *mut ::std::os::raw::c_void)
     -> ffi_status;
    pub fn ffi_prep_cif(cif: *mut ffi_cif, abi: ffi_abi,
                        nargs: ::std::os::raw::c_uint, rtype: *mut ffi_type,
                        atypes: *mut *mut ffi_type) -> ffi_status;
    pub fn ffi_prep_cif_var(cif: *mut ffi_cif, abi: ffi_abi,
                            nfixedargs: ::std::os::raw::c_uint,
                            ntotalargs: ::std::os::raw::c_uint,
                            rtype: *mut ffi_type, atypes: *mut *mut ffi_type)
     -> ffi_status;
    pub fn ffi_call(cif: *mut ffi_cif,
                    _fn: ::std::option::Option<extern "C" fn()>,
                    rvalue: *mut ::std::os::raw::c_void,
                    avalue: *mut *mut ::std::os::raw::c_void);
}
